# llvm_study_Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md  compiler.sh  main.cpp
include/: ast.h  codegen.h  flags.def  flags.h  lexer.h  llvm_ir_codegen.h  llvm_optimizer.h  llvm_target.h  parser.h  tempfile.h  utils.h
src/: codegen.cpp  flags.cpp  llvm_ir_codegen.cpp  llvm_object_builder.cpp  llvm_optimizer.cpp  llvm_optimzer.cpp  llvm_target.cpp  parser.cpp
src/lib/: core_operator  output.cpp
test/: CMakeLists.txt  hello.k  test  test_ast.cpp  test_lexer.cpp  test_llvm_codegen.cpp  test_llvm_optimizer.cpp  test_main.cpp  test_utils.h
